@@ -60,6 +60,9 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Set;
+import java.util.concurrent.TimeUnit;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 import org.eclipse.core.resources.IMarker;
 import org.eclipse.core.resources.IResource;
@@ -67,14 +70,19 @@ import org.eclipse.core.runtime.CoreException;
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
+import org.eclipse.core.runtime.OperationCanceledException;
 import org.eclipse.core.runtime.Path;
 import org.eclipse.core.runtime.Platform;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.dialogs.Dialog;
+import org.eclipse.jface.dialogs.IPageChangeProvider;
+import org.eclipse.jface.dialogs.PageChangedEvent;
 import org.eclipse.osgi.util.NLS;
 import org.eclipse.swt.program.Program;
+import org.eclipse.ui.IWorkbenchPart;
 import org.eclipse.ui.PlatformUI;
+import org.osgi.framework.Bundle;
 
 import de.adwin.driver.ADwinCommunicationError;
 import fr.univamu.ism.docometre.Activator;
@@ -90,7 +98,10 @@ import fr.univamu.ism.docometre.dacqsystems.Module;
 import fr.univamu.ism.docometre.dacqsystems.ModuleBehaviour;
 import fr.univamu.ism.docometre.dacqsystems.Process;
 import fr.univamu.ism.docometre.dacqsystems.functions.FunctionsUtil;
+import fr.univamu.ism.docometre.dacqsystems.ui.ProcessEditor;
+import fr.univamu.ism.docometre.dacqsystems.adwin.ui.dacqconfigurationeditor.ADWinDACQConfigurationEditor;
 import fr.univamu.ism.docometre.dacqsystems.adwin.ui.dialogs.ParametersDialog;
+import fr.univamu.ism.docometre.dacqsystems.adwin.ui.processeditor.ADWinProcessEditor;
 import fr.univamu.ism.docometre.preferences.GeneralPreferenceConstants;
 import fr.univamu.ism.process.Block;
 import fr.univamu.ism.process.ScriptSegment;
@@ -124,6 +135,7 @@ public class ADWinProcess extends Process {
 	transient private double timeBefore;
 	transient private double timeAfter;
 	transient private LinkedHashMap<ADWinVariable, Float> currentTrialParameters = new LinkedHashMap<>();
+	transient private LinkedHashMap<ADWinVariable, String> currentTrialParametersString = new LinkedHashMap<>();
 	transient private IResource parametersFile;
 	transient private int currentTrialNumber;
 	transient private int response;
@@ -138,11 +150,12 @@ public class ADWinProcess extends Process {
 		
 		@Override
 		protected IStatus run(IProgressMonitor monitor) {
+			double processBeginTime = 0;
 			try {
 				getThread().setPriority(Thread.MAX_PRIORITY);
 				int processNumberInt = Integer.parseInt(ADWinProcess.this.getProperty(ADWinProcessProperties.PROCESS_NUMBER));	
 				boolean active = ((ADWinDACQConfiguration)ADWinProcess.this.getDACQConfiguration()).getADwinDevice().Process_Status(processNumberInt) == 1;
-				double processBeginTime = System.currentTimeMillis()/1000d;
+				processBeginTime = System.currentTimeMillis()/1000d;
 				String date = new SimpleDateFormat("EEE d MMM yyyy HH:mm:ss", Locale.getDefault()).format(new Date());
 				appendToEventDiary(date);
 				appendToEventDiary(NLS.bind(ADWinMessages.ADWinDiary_StartingAt,  ObjectsController.getResourceForObject(ADWinProcess.this).getName(), processBeginTime));
@@ -161,20 +174,12 @@ public class ADWinProcess extends Process {
 					timeBefore = System.currentTimeMillis()/1000d;
 					
 					//RECOVERY
-//					for (int i = 0; i < ADWinProcess.this.getDACQConfiguration().getModulesNumber(); i++) {
-//						ModuleBehaviour module = ADWinProcess.this.getDACQConfiguration().getModule(i);
-//						module.recovery();
-//					}
 					ADWinProcess.this.recovery();
 					timeAfter = System.currentTimeMillis()/1000d;
 					appendToEventDiary(NLS.bind(ADWinMessages.ADWinDiary_RecoveryTime, (timeAfter - timeBefore)));
 					
 					timeBefore = System.currentTimeMillis()/1000d;
 					//GENERATION
-//					for (int i = 0; i < ADWinProcess.this.getDACQConfiguration().getModulesNumber(); i++) {
-//						ModuleBehaviour module = ADWinProcess.this.getDACQConfiguration().getModule(i);
-//						module.generation();
-//					}
 					ADWinProcess.this.generation();
 					
 					timeAfter = System.currentTimeMillis()/1000d;
@@ -202,37 +207,27 @@ public class ADWinProcess extends Process {
 						@Override
 						public void run() {
 //							StatusLineManager statusLineManger = ((WorkbenchWindow)PlatformUI.getWorkbench().getActiveWorkbenchWindow()).getStatusLineManager();
-//							statusLineManger.setMessage(NLS.bind(DocometreMessages.Workload_Time, workload, time));
+//							statusLineManger.setMessage(NLS.bind(DocometreMessages.Workload_Time, workload, formater.format(realTime)));
 							ApplicationActionBarAdvisor.workloadTimeContributionItem.setText(NLS.bind(DocometreMessages.Workload_Time, workload, time));
 						}
 					});
 				}
-				
+			} catch (ADwinCommunicationError e) {
+				appendToEventDiary(e.getMessage());
+			} finally {
+				// CLOSE
+				ADWinProcess.this.close();
 				PlatformUI.getWorkbench().getDisplay().asyncExec(new Runnable() {
 					@Override
 					public void run() {
-//						StatusLineManager statusLineManger = ((WorkbenchWindow)PlatformUI.getWorkbench().getActiveWorkbenchWindow()).getStatusLineManager();
-//						statusLineManger.setMessage(NLS.bind(DocometreMessages.Workload_Time, "0", time));
 						ApplicationActionBarAdvisor.workloadTimeContributionItem.setText(NLS.bind(DocometreMessages.Workload_Time, "0", time));
 					}
 				});
-				
-				// CLOSE
-//				for (int i = 0; i < ADWinProcess.this.getDACQConfiguration().getModulesNumber(); i++) {
-//					ModuleBehaviour module = ADWinProcess.this.getDACQConfiguration().getModule(i);
-//					module.close();
-//				}
-				ADWinProcess.this.close();
 				double processEndTime = System.currentTimeMillis()/1000d;
-				
 				if(ObjectsController.getResourceForObject(ADWinProcess.this) != null) {
 					appendToEventDiary(Activator.NEW_LINE + NLS.bind(ADWinMessages.ADWinDiary_Ending, ObjectsController.getResourceForObject(ADWinProcess.this).getName(), processEndTime));
 					appendToEventDiary(NLS.bind(ADWinMessages.ADWinDiary_Approximative, ObjectsController.getResourceForObject(ADWinProcess.this).getName(), (processEndTime-processBeginTime)));
 				}
-				
-				
-			} catch (ADwinCommunicationError e) {
-				appendToEventDiary(e.getMessage());
 			}
 			return Status.OK_STATUS;
 		}
@@ -250,8 +245,25 @@ public class ADWinProcess extends Process {
 		super.appendToEventDiary(event);
 	}
 	
+	private void deleteAdbasicFile(String filePath) {
+		File file = new File(filePath);
+		if (file.exists()) if (!file.delete()) Activator.logWarningMessage("Clean build. File " + file + " not deleted !");
+
+	}
+	
+	@Override
+	public void cleanBuild() {
+		IResource processResource = ObjectsController.getResourceForObject(this);
+		IPath wsPath = new Path(Platform.getInstanceLocation().getURL().getPath());
+		String currentFolder = wsPath.toOSString().replaceAll(File.separator + "$", "") + processResource.getParent().getFullPath().toOSString();
+		String outputFolder = currentFolder + File.separator + "BinSource";
+		String adbasicFilePath = outputFolder + File.separator + processResource.getFullPath().lastSegment().replaceAll(Activator.processFileExtension +"$", ".BAS");
+		deleteAdbasicFile(adbasicFilePath);
+	}
+	
 	@Override
 	public void compile(IProgressMonitor progressMonitor) throws Exception {
+		cleanBuild();
 		if(Platform.getOS().equals(Platform.OS_WIN32)) {
 			Program programEditor = Program.findProgram (".bas");
 			if(programEditor == null) {
@@ -260,7 +272,6 @@ public class ADWinProcess extends Process {
 		}
 		
 		IResource processResource = ObjectsController.getResourceForObject(this);
-		
 		IPath wsPath = new Path(Platform.getInstanceLocation().getURL().getPath());
 		String currentFolder = wsPath.toOSString().replaceAll(File.separator + "$", "") + processResource.getParent().getFullPath().toOSString();
 		String outputFolder = currentFolder + File.separator + "BinSource";
@@ -297,53 +308,99 @@ public class ADWinProcess extends Process {
 		if(Platform.getOS().equals(Platform.OS_MACOSX)) cmdLine = createOSXCompileProcess(currentFolder, outputFolderCmdLine, adbasicCompiler, adbasicFilePath);
 		progressMonitor.worked(1);
 		
-		java.lang.Process process = Runtime.getRuntime().exec(cmdLine);
-		process.waitFor();
+		java.lang.Process process = Runtime.getRuntime().exec(cmdLine.split(" "));
 		
 		String line;
-		BufferedReader error = new BufferedReader(new InputStreamReader(process.getErrorStream()));
-		String errorString = "";
-		while((line = error.readLine()) != null){
-			errorString = errorString + line + "\n";
-		}
-		error.close();
-//		if(!errorString.equals("")) {
-//			IMarker marker = processResource.createMarker(DocometreBuilder.MARKER_ID);
-//			marker.setAttribute(IMarker.SEVERITY, IMarker.SEVERITY_ERROR);
-//			marker.setAttribute(IMarker.MESSAGE, errorString);
-//			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage + "\n" + errorString); 
-//		}
+//			BufferedReader error = new BufferedReader(new InputStreamReader(process.getErrorStream()));
+//			String errorString = "";
+//			while((line = error.readLine()) != null){
+//				errorString = errorString + line + "\n";
+//			}
+//			error.close();
+//			if(!errorString.equals("")) {
+//				IMarker marker = processResource.createMarker(DocometreBuilder.MARKER_ID);
+//				marker.setAttribute(IMarker.SEVERITY, IMarker.SEVERITY_ERROR);
+//				marker.setAttribute(IMarker.MESSAGE, errorString);
+//				throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage + "\n" + errorString); 
+//			}
+		boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+		boolean firstLine = true;
 		BufferedReader input = new BufferedReader(new InputStreamReader(process.getInputStream()));
 		while((line=input.readLine()) != null){
-		    System.out.println("Input : " + line);
+			if(useDocker && firstLine) line += " (docker container ID)";
+		    if(!"adwin".equals(line)) {
+			    Activator.logInfoMessage(line, getClass());
+		    }
+		    firstLine = false;
 		}
 		input.close();
 		
-//		ProcessBuilder processBuilder = new ProcessBuilder(cmdLine);
-//		processBuilder.inheritIO();
-//		processBuilder.directory(outputFolderFile);
-//		processBuilder.start().waitFor();
+		boolean processError = false;
+		input = new BufferedReader(new InputStreamReader(process.getErrorStream()));
+		while((line=input.readLine()) != null){
+			if(!line.contains("0 error(s), 0 warning(s)")) {
+				System.err.println("Error : " + line);
+			    Activator.logErrorMessage(line);
+			    processError = !line.contains(":err:explorer:initialize_display_settings Failed to query current display settings for");
+			}
+		}
+		input.close();
+
+		boolean stillWaiting = true;
+	    while (stillWaiting && !progressMonitor.isCanceled()) {
+	    	stillWaiting = !process.waitFor(1, TimeUnit.SECONDS);						
+		}
+	    if(progressMonitor.isCanceled() && process.isAlive()) 
+	    	process.destroy();
+	    if(progressMonitor.isCanceled()) throw new OperationCanceledException();
+		
+		
+//			ProcessBuilder processBuilder = new ProcessBuilder(cmdLine);
+//			processBuilder.inheritIO();
+//			processBuilder.directory(outputFolderFile);
+//			processBuilder.start().waitFor();
+		
 		
 		progressMonitor.worked(1);
 		
 		
 		processResource.deleteMarkers(null, true, IResource.DEPTH_INFINITE);
+		ADWinDACQConfiguration dacqConfiguration = (ADWinDACQConfiguration) ObjectsController.getDACQConfiguration(this);
+		IResource dacqConfigurationResource = ObjectsController.getResourceForObject(dacqConfiguration);
+		dacqConfigurationResource.deleteMarkers(null, true, IResource.DEPTH_INFINITE);
 		
 		//Get compile errors
 		progressMonitor.subTask(DocometreMessages.ADWinProcess_GetCompileErrorsMessage);
 		if(errorFile.exists()) {
 			createMarker(IMarker.SEVERITY_ERROR, processResource, errorFile);
-			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
 		}
 		//Get more general compile errors
 		if(generalErrorfile.exists()) {
 			createMarker(IMarker.SEVERITY_ERROR, processResource, generalErrorfile);
-			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
 		}
 		//Get compile warnings
 		if(warningFile.exists()) {
 			createMarker(IMarker.SEVERITY_WARNING, processResource, warningFile);
-			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
+		}
+
+		Bundle librariesBundle = Platform.getBundle("Libraries");
+		String message = NLS.bind(DocometreMessages.CurrentLibrariesVersion, librariesBundle.getVersion().toString());
+		Activator.logInfoMessage(message, getClass());
+		ADWinDACQConfiguration dacqConfig = (ADWinDACQConfiguration)getDACQConfiguration();
+		String librariesAbsolutePath = dacqConfig.getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH);
+		Pattern pattern = Pattern.compile("Libraries_\\d\\.\\d.\\d.\\d\\d\\d\\d\\d\\d\\d\\d\\d\\d\\d\\d");
+		Matcher matcher = pattern.matcher(librariesAbsolutePath);
+		if (matcher.find()) {
+			String usedLibrariesVersion = librariesAbsolutePath.substring(matcher.start(), matcher.end());
+			usedLibrariesVersion = usedLibrariesVersion.replaceAll("Libraries_", "");
+			message = NLS.bind(DocometreMessages.DacqConfLibrariesVersion, usedLibrariesVersion);
+			Activator.logInfoMessage(message, getClass());
+			if(!usedLibrariesVersion.equals(librariesBundle.getVersion().toString())) {
+				Activator.logWarningMessage(DocometreMessages.UpdateLibrariesVersion);
+				IMarker marker = dacqConfigurationResource.createMarker(DocometreBuilder.MARKER_ID);
+				marker.setAttribute(IMarker.MESSAGE, DocometreMessages.UpdateLibrariesVersion);
+				marker.setAttribute(IMarker.SEVERITY, IMarker.SEVERITY_WARNING);
+			}
 		}
 		
 		if(getScript().getCodeGenerationStatus().length > 0) {
@@ -356,7 +413,6 @@ public class ADWinProcess extends Process {
 					marker.setAttribute(IMarker.SEVERITY, status.getSeverity()==IStatus.ERROR?IMarker.SEVERITY_ERROR:IMarker.SEVERITY_WARNING);
 					if(marker.getAttribute(IMarker.SEVERITY, IMarker.SEVERITY_ERROR) == IMarker.SEVERITY_ERROR) Activator.logErrorMessage(status.getMessage());
 					if(marker.getAttribute(IMarker.SEVERITY, IMarker.SEVERITY_WARNING) == IMarker.SEVERITY_WARNING) Activator.logWarningMessage(status.getMessage());
-					
 				} catch (CoreException e) {
 					Activator.logErrorMessageWithCause(e);
 					e.printStackTrace();
@@ -364,7 +420,43 @@ public class ADWinProcess extends Process {
 			}
 		}
 		
+		PlatformUI.getWorkbench().getDisplay().syncExec(new Runnable() {
+			@Override
+			public void run() {
+				IWorkbenchPart editorPart = Activator.getEditor(ADWinProcess.this, ADWinProcessEditor.ID);
+				if(editorPart != null) {
+					((ProcessEditor)editorPart).updateTitleImage();
+					PageChangedEvent event = new PageChangedEvent((IPageChangeProvider) editorPart, ((ProcessEditor)editorPart));
+					((ProcessEditor)editorPart).pageChanged(event);
+				}
+				ADWinDACQConfiguration dacqConfiguration = (ADWinDACQConfiguration) ObjectsController.getDACQConfiguration(ADWinProcess.this);
+//				IResource dacqConfigurationResource = ObjectsController.getResourceForObject(dacqConfiguration);
+				editorPart = Activator.getEditor(dacqConfiguration, ADWinDACQConfigurationEditor.ID);
+				if(editorPart != null) {
+					((ADWinDACQConfigurationEditor)editorPart).updateTitleImage();
+				}
+				
+			}
+		});
+		
 		progressMonitor.worked(1);
+		
+		if(processError) {
+			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
+		}
+		
+		//Get compile errors
+		if(errorFile.exists()) {
+			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
+		}
+		//Get more general compile errors
+		if(generalErrorfile.exists()) {
+			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
+		}
+		//Get compile warnings
+		if(warningFile.exists()) {
+			throw new Exception(DocometreMessages.ADWinProcess_CompileErrorsMessage); 
+		}
 		
 	}
 	
@@ -383,7 +475,7 @@ public class ADWinProcess extends Process {
 						if(line.startsWith("Error:") || line.startsWith("Warning:") || line.startsWith("Error :") || line.startsWith("Warning :")) {
 							try {
 								boolean adbasic4 = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.ADBASIC_VERSION).equals(ADWinDACQConfigurationProperties.VINF4);
-								String lineNumber = "1";
+								String lineNumber = "";
 								IMarker marker = processResource.createMarker(DocometreBuilder.MARKER_ID);
 								String[] lines = line.split("\\.\\s");
 								line = "";
@@ -400,7 +492,13 @@ public class ADWinProcess extends Process {
 									String[] lineSplitted = line.split(":");				
 									lineNumber = lineSplitted[lineSplitted.length - 1].replaceAll("\\s+","");
 								}
-								marker.setAttribute(IMarker.LINE_NUMBER, Integer.parseInt(lineNumber));
+								
+								try {
+									int lineNumberInteger = Integer.parseInt(lineNumber);
+									marker.setAttribute(IMarker.LINE_NUMBER, lineNumberInteger);
+								} catch (Exception e) {
+									// TODO: Nothing
+								} 
 								marker.setAttribute(IMarker.SEVERITY, severity);
 							} catch (CoreException e) {
 								Activator.logErrorMessageWithCause(e);
@@ -417,16 +515,6 @@ public class ADWinProcess extends Process {
 	}
 	
 	private String createOSXCompileProcess(String currentFolder, String outputFolder, String adbasicCompiler, String adbasicFilePath) throws IOException, InterruptedException {
-		// Replace all spaces by "\ " in adbasicfilePath
-		String[] fullPathSplitted = adbasicFilePath.split("\\s");
-		adbasicFilePath = "";
-		for (int i = 0; i < fullPathSplitted.length; i++) {
-			adbasicFilePath = adbasicFilePath + fullPathSplitted[i];
-			if(i < fullPathSplitted.length - 1) adbasicFilePath = adbasicFilePath + "\\" + " ";
-		}
-		// Replace "/" by "\" and add Z: drive (wine) 
-		adbasicFilePath = processPathForMacOSX(adbasicFilePath);
-		outputFolder = processPathForMacOSX(outputFolder);
 		
 		// We need to create a bash file in order to launch ADBasic with wine
 		// Bash file path
@@ -435,29 +523,61 @@ public class ADWinProcess extends Process {
 		final File bashFile = new File(bashFilePath);
 		if(bashFile.exists()) bashFile.delete();
 		FileWriter fileWriter = new FileWriter(bashFile);
-		// Populate this file with command string
-		// Get wine full path from preferences
-		String wineFullPath = Activator.getDefault().getPreferenceStore().getString(GeneralPreferenceConstants.WINE_FULL_PATH);
-		// Replace all spaces by "\ "
-		fullPathSplitted = wineFullPath.split("\\s");
-		wineFullPath = "";
-		for (int i = 0; i < fullPathSplitted.length; i++) {
-			wineFullPath = wineFullPath + fullPathSplitted[i];
-			if(i < fullPathSplitted.length - 1) wineFullPath = wineFullPath + "\\" + " ";
+		
+		boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+
+		if(!useDocker) {
+			// Replace all spaces by "\ " in adbasicfilePath
+			String[] fullPathSplitted = adbasicFilePath.split("\\s");
+			adbasicFilePath = "";
+			for (int i = 0; i < fullPathSplitted.length; i++) {
+				adbasicFilePath = adbasicFilePath + fullPathSplitted[i];
+				if(i < fullPathSplitted.length - 1) adbasicFilePath = adbasicFilePath + "\\" + " ";
+			}
+			// Replace "/" by "\" and add Z: drive (wine) 
+			adbasicFilePath = processPathForMacOSX(adbasicFilePath);
+			outputFolder = processPathForMacOSX(outputFolder);
+		
+			// Populate this file with command string
+			// Get wine full path from preferences
+			String wineFullPath = Activator.getDefault().getPreferenceStore().getString(GeneralPreferenceConstants.WINE_FULL_PATH);
+			// Replace all spaces by "\ "
+			fullPathSplitted = wineFullPath.split("\\s");
+			wineFullPath = "";
+			for (int i = 0; i < fullPathSplitted.length; i++) {
+				wineFullPath = wineFullPath + fullPathSplitted[i];
+				if(i < fullPathSplitted.length - 1) wineFullPath = wineFullPath + "\\" + " ";
+			}
+			// Replace all spaces by "\ " form adbasicCompiler
+			fullPathSplitted = adbasicCompiler.split("\\s");
+			adbasicCompiler = "";
+			for (int i = 0; i < fullPathSplitted.length; i++) {
+				adbasicCompiler = adbasicCompiler + fullPathSplitted[i];
+				if(i < fullPathSplitted.length - 1) adbasicCompiler = adbasicCompiler + "\\" + " ";
+			}
+			String cmd = wineFullPath + " \"" + adbasicCompiler + "\"";
+			cmd = cmd + getCommandLineParameters(outputFolder, adbasicFilePath);
+			fileWriter.write(cmd);
+			fileWriter.close();
+		} else {
+			String librariesPath = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH);
+			IPath adbasicPath = Path.fromOSString(adbasicFilePath);
+			String volume1 = " -v " + adbasicPath.removeLastSegments(1).toPortableString() + ":" + adbasicPath.removeLastSegments(1).toPortableString() + ":rw";
+			String volume2 = " -v " + librariesPath + ":" + librariesPath + ":ro";
+			String incLibFoldersOptions = " /IP/opt/adwin/ADwin-linux_6.0.30.00/adwin-compiler-6.0.30/share/adbasic/Inc/";
+			incLibFoldersOptions = incLibFoldersOptions +" /LP/opt/adwin/ADwin-linux_6.0.30.00/adwin-compiler-6.0.30/share/adbasic/Lib/";
+			String cmd = "/usr/local/bin/docker run -w " + adbasicPath.removeLastSegments(1).toPortableString() + " -di" + volume1 + volume2 + " --name adwin ubuntu:adwin";
+			cmd += "\n/usr/local/bin/docker cp /Users/frank/git/DOCoMETRe/Libraries/includes/ADWinIncludeFiles/. adwin:/opt/adwin/ADwin-linux_6.0.30.00/adwin-compiler-6.0.30/share/adbasic/Inc/";
+			cmd += "\n/usr/local/bin/docker cp /Users/frank/git/DOCoMETRe/Libraries/includes/ADWinIncludeFiles/. adwin:/opt/adwin/ADwin-linux_6.0.30.00/adwin-compiler-6.0.30/share/adbasic/Lib/";
+			cmd += "\n/usr/local/bin/docker exec adwin /opt/adwin/bin/adbasic " + adbasicPath.lastSegment() + getCommandLineParameters(outputFolder, adbasicFilePath) + incLibFoldersOptions;
+			cmd += "\n/usr/local/bin/docker stop -t 1 adwin";
+			cmd += "\n/usr/local/bin/docker rm adwin";
+			fileWriter.write(cmd);
+			fileWriter.close();
 		}
-		// Replace all spaces by "\ " form adbasicCompiler
-		fullPathSplitted = adbasicCompiler.split("\\s");
-		adbasicCompiler = "";
-		for (int i = 0; i < fullPathSplitted.length; i++) {
-			adbasicCompiler = adbasicCompiler + fullPathSplitted[i];
-			if(i < fullPathSplitted.length - 1) adbasicCompiler = adbasicCompiler + "\\" + " ";
-		}
-		String cmd = wineFullPath + " \"" + adbasicCompiler + "\"";
-		cmd = cmd + getCommandLineParameters(outputFolder, adbasicFilePath);
-		fileWriter.write(cmd);
-		fileWriter.close();
+		
 		// This bash file must be executable 
-		java.lang.Process process = Runtime.getRuntime().exec("chmod 777 " + bashFilePath);
+		java.lang.Process process = Runtime.getRuntime().exec(new String[] {"chmod", "777", bashFilePath});
 		process.waitFor();
 		return "/bin/sh " + bashFilePath;
 	}
@@ -481,31 +601,56 @@ public class ADWinProcess extends Process {
 
 	private String getCommandLineParameters(String outputFolder, String adbasicFilePath) {
 		String cmdParams = "";
-		String[] adbasicFilePathSplitted = adbasicFilePath.split("\\\\");
-		String errorFileName = adbasicFilePathSplitted[adbasicFilePathSplitted.length - 1].replaceAll("\\.(?i)bas$", ".err");
-		if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.ADBASIC_VERSION).equals(ADWinDACQConfigurationProperties.VINF4)) {
-			cmdParams = " /M \"" + adbasicFilePath + "\" /A " + outputFolder + " /SP /P9 > " + errorFileName;
-		} else {
-			if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.SYSTEM_TYPE).equals(ADWinDACQConfigurationProperties.GOLD)) {
-				if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
-					cmdParams = " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SG /P9 > " + errorFileName;
-				} else {
-					cmdParams = " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SGII /P11 > " + errorFileName;
-				}
-				
+		boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+		if(!useDocker) {
+			String[] adbasicFilePathSplitted = adbasicFilePath.split("\\\\");
+			String errorFileName = adbasicFilePathSplitted[adbasicFilePathSplitted.length - 1].replaceAll("\\.(?i)bas$", ".err");
+			if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.ADBASIC_VERSION).equals(ADWinDACQConfigurationProperties.VINF4)) {
+				cmdParams = " /M \"" + adbasicFilePath + "\" /A " + outputFolder + " /SP /P9 2>" + errorFileName;
 			} else {
-				if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
-					cmdParams = cmdParams + " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SP /P9 > " + errorFileName;
+				if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.SYSTEM_TYPE).equals(ADWinDACQConfigurationProperties.GOLD)) {
+					if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
+						cmdParams = " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SG /P9 2>" + errorFileName;
+					} else {
+						cmdParams = " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SGII /P11 2>" + errorFileName;
+					}
+					
 				} else {
-					cmdParams = cmdParams + " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SPII /P11 > " + errorFileName;
+					if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
+						cmdParams = cmdParams + " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SP /P9 2>" + errorFileName;
+					} else {
+						cmdParams = cmdParams + " /M \"" + adbasicFilePath + "\" /A\"" + outputFolder + "\" /SPII /P11 2>" + errorFileName;
+					}
 				}
 			}
+			return cmdParams;
+		} else {
+			if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.ADBASIC_VERSION).equals(ADWinDACQConfigurationProperties.VINF4)) {
+				cmdParams = " /M /SP /P9";
+			} else {
+				if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.SYSTEM_TYPE).equals(ADWinDACQConfigurationProperties.GOLD)) {
+					if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
+						cmdParams = " /M /SG /P9";
+					} else {
+						cmdParams = " /M /SGII /P11";
+					}
+					
+				} else {
+					if (getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.CPU_TYPE).equals(ADWinDACQConfigurationProperties.I)) {
+						cmdParams = " /M /SP /P9";
+					} else {
+						cmdParams = " /M /SPII /P11";
+					}
+				}
+			}
+			return cmdParams;
 		}
-		return cmdParams;
 	}
 	
 	@Override
 	public String getCode(ModuleBehaviour script) throws Exception {
+		
+		getCurrentProcess().getScript().setIndentCode(true);
 		
 //		for (int i = 0; i < getDACQConfiguration().getModulesNumber(); i++) {
 //			getDACQConfiguration().getModule(i).reset();
@@ -582,7 +727,8 @@ public class ADWinProcess extends Process {
 	}
 	
 	public static String processPathForMacOSX(String path) {
-		if(Platform.getOS().equals(Platform.OS_MACOSX)) {
+		boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+		if(Platform.getOS().equals(Platform.OS_MACOSX) && !useDocker) {
 			// Replace all spaces by "/" in adbasicfilePath by "\"
 			String[] pathSplitted = path.split("/");
 			path = "";
@@ -666,25 +812,46 @@ public class ADWinProcess extends Process {
 			
 			if(systemType.equals(ADWinDACQConfigurationProperties.GOLD) && cpuType.equals(ADWinDACQConfigurationProperties.II)) {
 				if(importStringLibrary) code = code + "IMPORT String.lib\n";
-				code = code + "IMPORT " + processPathForMacOSX(getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator +  "DOCOLIBGoldII.LIB\n");
+				String temp = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator;
+				boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+				if(useDocker) temp = "";
+				temp = temp + "DOCOLIBGoldII.LIB\n";
+				temp =	ADWinProcess.processPathForMacOSX(temp);
+				code = code + "IMPORT " + temp;
 				code = code + "#INCLUDE ADwinGoldII.INC\n";
 			}
 				
 			if(systemType.equals(ADWinDACQConfigurationProperties.PRO) && cpuType.equals(ADWinDACQConfigurationProperties.I)) {
 				if(importStringLibrary) code = code + "IMPORT String.li9\n";
-				code = code + "IMPORT " + processPathForMacOSX(getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator +  "DOCOLIBPro.LI9\n");
+				String temp = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator;
+				boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+				if(useDocker) temp = "";
+				temp = temp + "DOCOLIBPro.LI9\n";
+				temp =	ADWinProcess.processPathForMacOSX(temp);
+				code = code + "IMPORT " + temp;
 				code = code + "#INCLUDE ADwinPro.INC\n";
 			}
 				
 			if(systemType.equals(ADWinDACQConfigurationProperties.PRO) && cpuType.equals(ADWinDACQConfigurationProperties.II)) {
 				if(importStringLibrary) code = code + "IMPORT String.lib\n";
-				code = code + "IMPORT " + processPathForMacOSX(getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator +  "DOCOLIBProII.LIB\n");
+				String temp = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator;
+				boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+				if(useDocker) temp = "";
+				temp = temp + "DOCOLIBProII.LIB\n";
+				temp =	ADWinProcess.processPathForMacOSX(temp);
+				code = code + "IMPORT " + temp;
 				code = code + "#INCLUDE ADwinPro2.INC\n";
 			}
 			
 			if(systemType.equals(ADWinDACQConfigurationProperties.GOLD) && cpuType.equals(ADWinDACQConfigurationProperties.I)) {
 				if(importStringLibrary) code = code + "IMPORT String.li9\n";
-				code = code + "IMPORT " + processPathForMacOSX(getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator +  "DOCOLIBGold.LI9\n");
+				
+				String temp = getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator;
+				boolean useDocker = Activator.getDefault().getPreferenceStore().getBoolean(GeneralPreferenceConstants.USE_DOCKER);
+				if(useDocker) temp = "";
+				temp = temp + "DOCOLIBGold.LI9\n";
+				temp =	ADWinProcess.processPathForMacOSX(temp);
+				code = code + "IMPORT " + temp;
 			}
 				
 //			code = code + "#INCLUDE " + processPathForMacOSX(getDACQConfiguration().getProperty(ADWinDACQConfigurationProperties.LIBRARIES_ABSOLUTE_PATH) + File.separator +  "DOCOLIB.INC\n");
@@ -716,6 +883,7 @@ public class ADWinProcess extends Process {
 			else if(cpuType.equals(ADWinDACQConfigurationProperties.II)) code = code + "GLOBALDELAY = 10^9/(FEG*3.3)\n";
 			code = code + "INDEX = 0\n";
 			code = code + "TERMINATE_PROCESS = 0\n";
+			code = code + "time = 0\n";
 			
 			
 			code = code + getCurrentProcess().getScript().getInitializeCode(this, ADWinCodeSegmentProperties.INITIALIZATION);
@@ -740,7 +908,7 @@ public class ADWinProcess extends Process {
 		}
 		
 		if (segment == ADWinCodeSegmentProperties.RECOVERY){
-			code = "\nREM ******** Debut recuperation données du PC (Stimuli)\n";
+//			code = "\nREM ******** Debut recuperation données du PC (Stimuli)\n";
 			
 			code = code + getCurrentProcess().getScript().getInitializeCode(this, ADWinCodeSegmentProperties.RECOVERY);
 			code = code + getCurrentProcess().getScript().getLoopCode(this, ADWinCodeSegmentProperties.RECOVERY);
@@ -749,7 +917,7 @@ public class ADWinProcess extends Process {
 		}
 		
 		if (segment == ADWinCodeSegmentProperties.TRANSFER){
-			code = "\nREM ******** Fin recuperation données du PC (Stimuli)\n\n";
+//			code = "\nREM ******** Fin recuperation données du PC (Stimuli)\n\n";
 			code = code + "REM ******** Debut autotransfert donnees vers PC\n";
 			
 			code = code + getCurrentProcess().getScript().getInitializeCode(this, ADWinCodeSegmentProperties.TRANSFER);
@@ -842,20 +1010,25 @@ public class ADWinProcess extends Process {
 	
 	@Override
 	public Job execute(String prefix, String suffix) throws Exception {
-		boot();
-		loadProcess();
-		int processNumberInt = Integer.parseInt(getProperty(ADWinProcessProperties.PROCESS_NUMBER));	
-		RealTimeLoopJob realTimeLoopJob = new RealTimeLoopJob(DocometreMessages.RunningProcess);
-		open(this, prefix, suffix);
-		generation();
+		try {
+			boot();
+			loadProcess();
+			int processNumberInt = Integer.parseInt(getProperty(ADWinProcessProperties.PROCESS_NUMBER));	
+			RealTimeLoopJob realTimeLoopJob = new RealTimeLoopJob(DocometreMessages.RunningProcess);
+			open(this, prefix, suffix);
+			generation();
 //		for (int i = 0; i < getDACQConfiguration().getModulesNumber(); i++) {
 //			ModuleBehaviour module = getDACQConfiguration().getModule(i);
 //			module.open(this);
 //			module.generation();
 //		}
-		pushParametersToADWinProcess();
-		((ADWinDACQConfiguration)getDACQConfiguration()).getADwinDevice().Start_Process(processNumberInt);
-		return realTimeLoopJob;
+			pushParametersToADWinProcess();
+			((ADWinDACQConfiguration)getDACQConfiguration()).getADwinDevice().Start_Process(processNumberInt);
+			return realTimeLoopJob;
+		} catch (Exception e) {
+			close();
+			throw e;
+		}
 	}
 	
 	public float[] getData(int transferNumInt, int nbData) throws ADwinCommunicationError {
@@ -881,6 +1054,8 @@ public class ADWinProcess extends Process {
 	}
 	
 	public void generation(){
+		ADWinVariable[] variables = ((ADWinDACQConfiguration)getDACQConfiguration()).getVariables();
+		GenerationDelegate.generate(variables, null, this);
 		for (int i = 0; i < getDACQConfiguration().getModulesNumber(); i++) {
 			ModuleBehaviour module = getDACQConfiguration().getModule(i);
 			module.generation();
@@ -932,7 +1107,9 @@ public class ADWinProcess extends Process {
 	
 	private void preManageParameters(IResource resource) throws Exception {
 		if(currentTrialParameters == null) currentTrialParameters = new LinkedHashMap<>();
+		if(currentTrialParametersString == null) currentTrialParametersString = new LinkedHashMap<>();
 		currentTrialParameters.clear();
+		currentTrialParametersString.clear();
 		// Init Parameters from params file if resource is a trial
 		if(ResourceType.isTrial(resource)) {
 			// Get trial number from trial name
@@ -954,6 +1131,9 @@ public class ADWinProcess extends Process {
 				if(parametersFile != null) {
 					// Retrieve values for this trial
 					List<String> lines = Files.readAllLines(FileSystems.getDefault().getPath(parametersFile.getLocation().toOSString()), StandardCharsets.UTF_8);
+					
+					removeComments(lines);
+					
 					if(lines.size() - 1 >= currentTrialNumber) {
 						String parametersNames = lines.get(0);
 						String parametersValues = lines.get(currentTrialNumber);
@@ -987,7 +1167,10 @@ public class ADWinProcess extends Process {
 							int index = 0;
 							for (String parameterName : parametersNamesArray) {
 								if(parameterName.equalsIgnoreCase(parameter.getProperty(ChannelProperties.NAME))) {
-									currentTrialParameters.put(parameter, Float.parseFloat(parametersValuesArray[index]));
+									if(parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.FLOAT) || parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.INT)) 
+										currentTrialParameters.put(parameter, Float.parseFloat(parametersValuesArray[index]));
+									if(parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.STRING)) 
+										currentTrialParametersString.put(parameter, parametersValuesArray[index]);
 									break;
 								}
 								index++;
@@ -1039,8 +1222,13 @@ public class ADWinProcess extends Process {
 				for (ADWinVariable parameter : parameters) {
 					String value = parameter.getProperty(ADWinVariableProperties.PARAMETER_VALUE);
 					try {
-						float floatValue =  Float.parseFloat(value);
-						currentTrialParameters.put(parameter, floatValue);
+						//float floatValue =  Float.parseFloat(value);
+						//currentTrialParameters.put(parameter, floatValue);
+						if(parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.FLOAT) || parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.INT)) 
+							currentTrialParameters.put(parameter, Float.parseFloat(value));
+						if(parameter.getProperty(ADWinVariableProperties.TYPE).equals(ADWinVariableProperties.STRING)) 
+							currentTrialParametersString.put(parameter, value);
+						
 					} catch (Exception e) {
 						throw e;
 					}
@@ -1050,6 +1238,22 @@ public class ADWinProcess extends Process {
 		}
 	}
 	
+	private void removeComments(List<String> lines) {
+		int n = 0;
+		while (n < lines.size()) {
+			String line = lines.get(n);
+			if(line.startsWith("#")) lines.remove(n);
+			else {
+				if(line.indexOf("#") > -1) {
+					line = line.replaceAll("#.*$", "");
+					lines.set(n, line);
+				}
+				n++;
+			}
+		}
+		
+	}
+
 	private void pushParametersToADWinProcess() throws Exception {
 		if(currentTrialParameters.size() > 0) {
 			float[] data = new float[currentTrialParameters.size()];
@@ -1064,6 +1268,32 @@ public class ADWinProcess extends Process {
 			}
 			Activator.logInfoMessage("Pushing paramaters to ADWin : " + parametersString, ADWinProcess.class);
 			((ADWinDACQConfiguration)ADWinProcess.this.getDACQConfiguration()).getADwinDevice().SetData_Float(200, data, 1, data.length);
+		}
+		if(currentTrialParametersString.size() > 0) {
+			String data = "";
+			Set<ADWinVariable> keys = currentTrialParametersString.keySet();
+			int i = 0;
+			String parametersString = "";
+			for (ADWinVariable variable : keys) {
+				String dataString = currentTrialParametersString.get(variable);
+				parametersString = parametersString + variable.getProperty(ChannelProperties.NAME) + " = " + dataString ;
+				data = data + dataString + "\n";
+				i++;
+				if(keys.size() > i) parametersString = parametersString + " - ";
+			}
+			if(data.length() > 1024)
+				Activator.logErrorMessage("Error : String parameters is too long (more than 1024 chars) !");
+			else {
+				Activator.logInfoMessage("Pushing parameters to ADWin (String) : " + parametersString, ADWinProcess.class);
+				byte[] bytesArray = data.getBytes(StandardCharsets.US_ASCII.name());
+				int[] intsArray = new int[bytesArray.length + 2];
+				intsArray[0] = bytesArray.length;
+				for (int j = 1; j < intsArray.length - 1; j++) {
+					intsArray[j] = bytesArray[j - 1];
+				}
+				((ADWinDACQConfiguration)ADWinProcess.this.getDACQConfiguration()).getADwinDevice().SetData_Long(199, intsArray, 1, intsArray.length);
+				
+			}
 		}
 	}
 	
