@@ -190,7 +190,7 @@ public class GatewayConnection implements Runnable, Py4JServerConnection {
 	protected void initCommands(Gateway gateway, List<Class<? extends Command>> commandsClazz) {
 		for (Class<? extends Command> clazz : commandsClazz) {
 			try {
-				Command cmd = clazz.newInstance();
+				Command cmd = clazz.getDeclaredConstructor().newInstance();
 				initCommand(gateway, cmd);
 			} catch (Exception e) {
 				String name = "null";
